# gapseq-rs

./: .gitignore  COMPARISON.md  Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/gapseq-align/src/: lib.rs
crates/gapseq-transport/src/: runner.rs
crates/gapsmith-align/: Cargo.toml
crates/gapsmith-align/src/: gspa.rs  lib.rs  precomputed.rs
crates/gapsmith-align/tests/: batch.rs  parity.rs  smoke.rs
crates/gapsmith-cli/: Cargo.toml
crates/gapsmith-cli/src/: main.rs
crates/gapsmith-cli/src/commands/: adapt.rs  align.rs  batch_align.rs  community.rs  convert.rs  db.rs  doall.rs  doall_batch.rs  draft.rs  example_model.rs  export_sbml.rs  fba.rs  fill.rs  find.rs  find_transport.rs  medium.rs  mod.rs  pan.rs  test.rs  update_sequences.rs
crates/gapsmith-cli/tests/: roundtrip.rs
crates/gapsmith-core/: Cargo.toml
crates/gapsmith-core/src/: lib.rs  model.rs
crates/gapsmith-db/: Cargo.toml
crates/gapsmith-db/src/: lib.rs  medium_rules.rs  seed.rs  stoich_hash.rs  stoich_parse.rs
crates/gapsmith-draft/: Cargo.toml
crates/gapsmith-draft/src/: biomass.rs  builder.rs  exchanges.rs  lib.rs  reactions_tbl.rs  runner.rs  stoich_hash.rs
crates/gapsmith-draft/tests/: smoke.rs
crates/gapsmith-fill/: Cargo.toml
crates/gapsmith-fill/src/: community.rs  fba.rs  futile.rs  gapfill.rs  lib.rs  lp.rs  medium.rs  pfba.rs  pool.rs  suite.rs
crates/gapsmith-fill/tests/: fill_smoke.rs  suite_toy.rs  textbook.rs
crates/gapsmith-find/: Cargo.toml
crates/gapsmith-find/src/: classify.rs  complex.rs  dbhit.rs  lib.rs  pathways.rs  runner.rs
crates/gapsmith-find/tests/: complex_parity.rs  pipeline_parity.rs
crates/gapsmith-io/: Cargo.toml
crates/gapsmith-io/src/: cbor.rs  json.rs  lib.rs  paths.rs
crates/gapsmith-medium/: Cargo.toml
crates/gapsmith-medium/src/: lib.rs  predict.rs
crates/gapsmith-sbml/: Cargo.toml
crates/gapsmith-sbml/src/: lib.rs  writer.rs
crates/gapsmith-sbml/tests/: integration.rs
crates/gapsmith-transport/: Cargo.toml
crates/gapsmith-transport/examples/: inspect_small.rs
crates/gapsmith-transport/src/: filter.rs  lib.rs  runner.rs
crates/gapsmith-transport/tests/: parity.rs
docs/: SUMMARY.md  architecture.md  cli-reference.md  comparison.md  feature-matrix.md  introduction.md  multi-genome.md  performance.md  porting-notes.md  user-guide.md
tools/: validate_sbml.py
tools/bench/: aggregate.py  diff_models.py  run_bench.sh
