[workspace]
resolver = "2"
members = [
    "crates/gapsmith-core",
    "crates/gapsmith-io",
    "crates/gapsmith-db",
    "crates/gapsmith-sbml",
    "crates/gapsmith-align",
    "crates/gapsmith-find",
    "crates/gapsmith-transport",
    "crates/gapsmith-draft",
    "crates/gapsmith-fill",
    "crates/gapsmith-medium",
    "crates/gapsmith-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Robert Hoehndorf <robert.hoehndorf@kaust.edu.sa>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/bio-ontology-research-group/gapsmith"
description = "Rust reimplementation of gapseq — informed prediction and analysis of bacterial metabolic pathways and genome-scale networks"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ciborium = "0.2"
sprs = { version = "0.11", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Workspace-internal
gapsmith-core = { path = "crates/gapsmith-core" }
gapsmith-io   = { path = "crates/gapsmith-io" }
gapsmith-db   = { path = "crates/gapsmith-db" }
gapsmith-sbml = { path = "crates/gapsmith-sbml" }
gapsmith-align = { path = "crates/gapsmith-align" }
gapsmith-find = { path = "crates/gapsmith-find" }
gapsmith-transport = { path = "crates/gapsmith-transport" }
gapsmith-draft = { path = "crates/gapsmith-draft" }
gapsmith-fill = { path = "crates/gapsmith-fill" }
gapsmith-medium = { path = "crates/gapsmith-medium" }

# SBML-specific
quick-xml   = "0.37"

# Alignment-specific
tempfile    = "3"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
