[package]
name = "gapsmith-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Alignment abstraction for gapsmith: blast/diamond/mmseqs2 runners + precomputed TSV ingestion."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
